# tp2_databricks

./: README.md
sales_pipeline/: README.md  main.py  notebook_test.py  pyproject.toml  requirements.txt
sales_pipeline/sales_pipeline/bronze/: ingestion.py
sales_pipeline/sales_pipeline/config/: config.yaml
sales_pipeline/sales_pipeline/gold/: aggregation.py
sales_pipeline/sales_pipeline/silver/: cleaning.py
sales_pipeline/sales_pipeline/utils/: spark_session.py
sales_pipeline/sales_pipeline_spark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sales_pipeline/tests/: conftest.py  test_aggregation.py  test_cleaning.py  test_ingestion.py
