[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-pipeline-spark"
version = "0.1.0"
description = "Pipeline ETL Spark pour l'analyse des ventes."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["spark", "pyspark", "etl", "databricks"]
dependencies = [
    "pyyaml>=6.0",
    "pytest>=7.0"
]



[tool.setuptools.packages.find]
where = ["."]
include = ["sales_pipeline*"]
